[package]
name = "better_jump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [workspace]
# members = ["move_vis"]

[dependencies]
bevy = { version = "0.6.0", features = ["dynamic"] }
bevy_rapier2d = { version = "*", features = [ "simd-stable" ] }
bevy_egui = "0.12.0"
float-ord = "0.3.2"
move_vis = { path = "./move_vis" }
